--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ effect to spot the differences.</em><br></p>
             <div class="col-12 col-md-10 video-block">
                 
                 <div>
-                    <video  width="100%" controls autoplay>
+                    <video  width="100%" controls>
                         <source id="vid" src="assets/video/trailer.mp4" type="video/mp4" frameborder="0" allowfullscreen>
                         Your browser does not support the video tag.
                     </video>
