--- a/index.html
+++ b/index.html
@@ -285,9 +285,8 @@ improvements and much more!&nbsp;<br><br></p>
             <div class="col-md-12 col-lg-8">
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>About Me</strong></h4>
-                <p class="mbr-text mbr-fonts-style display-7">Hey there! My name is Rod, I’m an artist and a tech guy, passionate about art and coding.<br><br>I started my first drawing lessons 20 years ago but
-only found myself programming as a hobby some years ago. Since then, I’ve been trying to figure out
-how to mix code and art.<br><br>That's when my first generative project called Senties was born. <br>Check out the project on Twitter -
+                <p class="mbr-text mbr-fonts-style display-7">Hey there! My name is Rod, I’m an artist and a tech guy, passionate about art and coding.<br><br>I started my first drawing lessons 20 years ago. 
+                    But recently I started programming and mixing the best of these two worlds, art and code.<br><br>That's when my first generative project called Senties was born. <br>Check out the project on Twitter -
 <a href="https://twitter.com/SentiesNFT" class="text-primary">@SentiesNFT</a><br></p>
             </div>
         </div>
